--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -35,7 +35,7 @@ jobs:
       uses: papeloto/action-zip@v1
       with:
         files: build/linux/helloworld
-        dest: helloworld.zip
+        dest: helloworld-${{ runner.os }}.zip
 
     - name: Create Release ${{ runner.os }}
       id: create_release_for_linux
@@ -52,7 +52,7 @@ jobs:
         GITHUB_TOKEN: ${{ github.token }}
       with:
         upload_url: ${{ steps.create_release_for_linux.outputs.upload_url }}
-        asset_path: ./helloworld.zip
+        asset_path: ./helloworld-${{ runner.os }}.zip
         asset_name: helloworld-${{ runner.os }}-${{ github.run_number }}.zip
         asset_content_type: application/zip
 
