--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -35,8 +35,8 @@ jobs:
     - name: Archive
       uses: papeloto/action-zip@v1
       with:
-        files: build
-        dest: helloworld.zip
+        files: build\macos\
+        dest: helloworld-${{ runner.os }}.zip
 
     - name: Create Release ${{ runner.os }}
       id: create_release_for_macos
@@ -53,6 +53,6 @@ jobs:
         GITHUB_TOKEN: ${{ github.token }}
       with:
         upload_url: ${{ steps.create_release_for_macos.outputs.upload_url }}
-        asset_path: ./helloworld.zip
+        asset_path: ./helloworld-${{ runner.os }}.zip
         asset_name: helloworld-${{ runner.os }}-${{ github.run_number }}.zip
         asset_content_type: application/zip
