--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -32,27 +32,28 @@ jobs:
       # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}\build\macos --config ${{env.BUILD_TYPE}}
 
-    - name: Archive
-      uses: papeloto/action-zip@v1
-      with:
-        files: ${{github.workspace}}\build\macos helloworld
-        dest: helloworld-${{ runner.os }}.zip
-
-    - name: Create Release ${{ runner.os }}
-      id: create_release_for_macos
-      uses: actions/create-release@v1
+    - uses: actions/checkout@v1
+    - name: create release
+      id: create_release
+      uses: actions/create-release@master
       env:
-        GITHUB_TOKEN: ${{ github.token }}
+        GITHUB_TOKEN: ${{ secrets.TOKEN }}
       with:
-        tag_name: ${{ runner.os }}${{ github.run_number }}
-        release_name: Release for ${{ runner.os }} ${{ github.run_number }}
-
-    - name: Upload Release ${{ runner.os }}
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+        draft: false
+        prerelease: false   
+    - name: download artifacts
+      uses: actions/download-artifact@v1
+      with:
+        name: uploads    
+    - name: upload macos
+      id: upload-macos 
       uses: actions/upload-release-asset@v1.0.1
       env:
-        GITHUB_TOKEN: ${{ github.token }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{ steps.create_release_for_macos.outputs.upload_url }}
-        asset_path: ./helloworld-${{ runner.os }}.zip
-        asset_name: helloworld-${{ runner.os }}-${{ github.run_number }}.zip
-        asset_content_type: application/zip
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./uploads/macos.zip
+        asset_name: macos.zip
+        asset_content_type: application/zip  
