--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -37,7 +37,7 @@ jobs:
       with:
         type: 'zip'
         filename: 'release.zip'
-        path: './build/macos'
+        path: 'build'
 
     - name: Create Release ${{ runner.os }}
       id: create_release_for_macos
@@ -54,7 +54,7 @@ jobs:
         GITHUB_TOKEN: ${{ github.token }}
       with:
         upload_url: ${{ steps.create_release_for_macos.outputs.upload_url }}
-        asset_path: ./helloworld-${{ runner.os }}.zip
+        asset_path: release.zip
         asset_name: helloworld-${{ runner.os }}-${{ github.run_number }}.zip
         asset_content_type: application/zip
 
