--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -36,6 +36,7 @@ jobs:
       uses: thedoctor0/zip-release@master
       with:
         filename: helloworld.zip
+        path: ${{github.workspace}}\build
 
     - name: Create Release ${{ runner.os }}
       id: create_release_for_macos
