--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -33,10 +33,10 @@ jobs:
       run: cmake --build ${{github.workspace}}/build/macos --config ${{env.BUILD_TYPE}}
 
     - name: Archive
-      uses: thedoctor0/zip-release@master
+      uses: papeloto/action-zip@v1
       with:
-        filename: helloworld.zip
-        path: ${{github.workspace}}
+        files: build/macos
+        dest: helloworld-${{ runner.os }}.zip
 
     - name: Create Release ${{ runner.os }}
       id: create_release_for_macos
