--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -25,11 +25,15 @@ jobs:
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build/windows -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
+      run: cmake -B ${{github.workspace}}/build/windows -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DBUILD_TESTS=ON
 
     - name: Build
       # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/build/windows --config ${{env.BUILD_TYPE}}
+
+    - name: Run tests
+      # Run 'test' cmake target
+      run: cmake --build ${{github.workspace}}/build/windows --config ${{env.BUILD_TYPE}} --target test
 
     - name: Archive
       uses: papeloto/action-zip@v1
@@ -55,5 +59,4 @@ jobs:
         asset_path: ./helloworld-${{ runner.os }}.zip
         asset_name: helloworld-${{ runner.os }}-${{ github.run_number }}.zip
         asset_content_type: application/zip
-
 
